sm/sm-b2b-connector/main/default/objects/Invoice_Company_Info__mdt/Invoice_Company_Info__mdt.object-meta.xml
<CustomObject>
    <label>Invoice Company Info</label>
    <pluralLabel>Invoice Company Info</pluralLabel>
</CustomObject>