sm/sm-b2b-connector/main/default/objects/Invoice_Company_Info__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>