sm/sm-b2b-connector/main/default/objects/Invoice_Company_Info__mdt/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>